--- a/src/index.html
+++ b/src/index.html
@@ -57,25 +57,25 @@
         <h1>It's coming.</h1>
     </div> -->
     <main>
-        <div id="work" class="project js-project" data-title="pickpack internship" data-text="I made a three months internship in Berlin at the pickpack startup. I was a React-Native developer on the application, I handled bug fixes, made code reviews and added tests with Detox and Enzyme. I reworked and improved performances of views around the app (such as the map or the onboarding)." data-link="https://www.pickpack.de/?_branch_match_id=688013326299254159">
+        <div id="work" class="project js-project right" data-title="pickpack internship" data-text="I made a three months internship in Berlin at the pickpack startup. I was a React-Native developer on the application, I handled bug fixes, made code reviews and added tests with Detox and Enzyme. I reworked and improved performances of views around the app (such as the map or the onboarding)." data-link="https://www.pickpack.de/?_branch_match_id=688013326299254159">
             <img src="images/pickpack.jpg" alt="Pickpack internship">
         </div>
-        <div class="project js-project" data-title="Olivier Geffard" data-text="Olivier Geffard is a french artist specialise in aquarelle. I designed some pages with Sketch and developed them as well with basic HTML, CSS and JavaScript." data-link="http://www.geffard.com/">
+        <div class="project js-project left" data-title="Olivier Geffard" data-text="Olivier Geffard is a french artist specialise in aquarelle. I designed some pages with Sketch and developed them as well with basic HTML, CSS and JavaScript." data-link="http://www.geffard.com/">
             <img src="images/mockup_oliviergeffard.jpg" alt="olivier geffard website">
         </div>
-        <div class="project js-project" data-title="Portfolio Sacha Tourtoulou" data-text="Sacha Tourtoulou is a french designer. I worked on one of his portfolios. I created it using React, with Gatsby to solve SEO problems. The site is responsive and displayed lazy loading images for performance." data-link="https://sacha-tourtoulou.netlify.com/">
+        <div class="project js-project right" data-title="Portfolio Sacha Tourtoulou" data-text="Sacha Tourtoulou is a french designer. I worked on one of his portfolios. I created it using React, with Gatsby to solve SEO problems. The site is responsive and displayed lazy loading images for performance." data-link="https://sacha-tourtoulou.netlify.com/">
             <img src="images/sacha_portfolio.png" alt="Sacha tourtoulou portfolio">
         </div>
-        <div class="project js-project" data-title="Webdock Society" data-text="This was a school project, with my team, we decided to make a webdock on intangible culture. I was the lead dev on this project and we made everything with javascript class." data-link="https://webdocksociety.netlify.com/">
+        <div class="project js-project left" data-title="Webdock Society" data-text="This was a school project, with my team, we decided to make a webdock on intangible culture. I was the lead dev on this project and we made everything with javascript class." data-link="https://webdocksociety.netlify.com/">
             <img src="images/webdock.png" alt="webdock sociétal">
         </div>
-        <div class="project js-project" data-title="POP QUIZZ" data-text="This is a project of pop culture question where I was in charge of the front end development with React" data-link="https://popquizz.netlify.com/">
+        <div class="project js-project right" data-title="POP QUIZZ" data-text="This is a project of pop culture question where I was in charge of the front end development with React" data-link="https://popquizz.netlify.com/">
             <img src="images/pop_quizz.png" alt="Jeux de quizz">
         </div>
-        <div class="project js-project" data-title="Personnal project" data-text="For a school project, we were ask to made an experience using animation css and keeping good performance with pure css." data-link="https://earthquake-simulator.netlify.com">
+        <div class="project js-project left" data-title="Personnal project" data-text="For a school project, we were ask to made an experience using animation css and keeping good performance with pure css." data-link="https://earthquake-simulator.netlify.com">
             <img src="images/mockup_personnal.jpg" alt="Css animations">
         </div>
-        <div class="project js-project" data-title="DCS" data-text="Event organized by ESCP Europe students. I designed the logo of the DCS 2018 along with flyers, invitations and prints. " >
+        <div class="project js-project right" data-title="DCS" data-text="Event organized by ESCP Europe students. I designed the logo of the DCS 2018 along with flyers, invitations and prints. " >
             <img src="images/mockup_affichedcs.jpg" alt="Digital consulting summit">
         </div>
         <!-- <div class="casestudy">
